<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_open"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_open" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_manage" />
        <item
            android:id="@+id/nav_out"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_out" />
        <item
            android:id="@+id/nav_mypage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_mypage" />
    </group>

</menu>